--- a/generators/app/templates/demo/index.html
+++ b/generators/app/templates/demo/index.html
@@ -6,46 +6,33 @@
 
     <title><%= elementName %> demo</title>
 
-    <script type="module" src="../node_modules/@polymer/iron-demo-helpers/demo-pages-shared-styles.js"></script>
-    <script type="module" src="../node_modules/@polymer/iron-demo-helpers/demo-snippet.js"></script>
+    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+
+    <script type="module">
+      import '@polymer/iron-demo-helpers/demo-pages-shared-styles';
+      import '@polymer/iron-demo-helpers/demo-snippet';
+    </script>
+
     <script type="module" src="../<%= elementName %>.js"></script>
 
     <custom-style>
       <style is="custom-style" include="demo-pages-shared-styles">
-        .vertical-section-container {
-          max-width: 500px;
-        }
       </style>
     </custom-style>
-
   </head>
+
   <body>
     <div class="vertical-section-container centered">
+      <h1>All <%= elementName %> demo</h1>
+
+      <!-- Default -->
       <h3>Default <%= elementName %> demo</h3>
       <demo-snippet>
         <template>
           <<%= elementName %>></<%= elementName %>>
         </template>
       </demo-snippet>
-      
-			<h3><%= elementName %> with prop demo</h3>
-      <demo-snippet>
-        <template>
-          <<%= elementName %> prop1="Human"></<%= elementName %>>
-        </template>
-      </demo-snippet>
 
-      <h3>Custom <%= elementName %> demo</h3>
-      <demo-snippet>
-        <template>
-          <style is="custom-style">
-            .super {
-              --<%= elementName %>-color: #8B0000;
-            }
-          </style>
-          <<%= elementName %> class="super"></<%= elementName %>>
-        </template>
-      </demo-snippet>
     </div>
   </body>
 </html>
